--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -217,7 +217,9 @@ This mode line is pretty.
     :config
     (setq base16-theme-256-color-source 'base16-shell)
     (setq base16-distinct-fringe-background nil)
-    (load-theme 'base16-tomorrow-night t))
+    (load-theme 'base16-material-darker t)
+
+    (defvar my/base16-colors base16-material-darker-theme-colors))
 
   ;; (use-package monokai-theme
   ;;   :ensure t
@@ -733,34 +735,6 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
 (define-key global-map (kbd "C--") 'text-scale-decrease)
 #+END_SRC
 
-** Jump list
-:PROPERTIES:
-:ID:       904c7ac3-2476-49f9-a012-88a1b03c1324
-:END:
-
-#+begin_src emacs-lisp
-    (use-package gumshoe
-      :general
-      (:states '(motion)
-               "C-o" 'gumshoe-backtrack-back
-               "C-i" 'gumshoe-backtrack-forward)
-      :straight (gumshoe :type git
-                         :host github
-                         :repo "Overdr0ne/gumshoe"
-                         :branch "master")
-      :init
-      (add-hook 'evil-mode-hook
-                (lambda ()
-                  (global-gumshoe-mode 1)
-                  (setq gumshoe-prefer-same-window t)
-                  (setq gumshoe-show-footprints-p nil)
-                  (defun consult-gumshoe-global ()
-                    (interactive)
-                    (consult-global-mark (ring-elements (oref gumshoe--global-backlog log)))))))
-#+end_src
-
-#+RESULTS:
-
 ** Evil Mode
 :PROPERTIES:
 :ID:       340D6E26-10E8-4456-8F96-84AF2E20D075
@@ -835,6 +809,36 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
 
 #+RESULTS:
 : t
+
+** Jump list
+:PROPERTIES:
+:ID:       904c7ac3-2476-49f9-a012-88a1b03c1324
+:END:
+
+#+begin_src emacs-lisp
+  (use-package jumpy
+    :general
+    (:states '(motion)
+             "C-o" 'jumpy-back
+             "C-i" 'jumpy-forward)
+    :straight (jumpy :type git
+                       :host github
+                       :repo "landakram/jumpy"
+                       :branch "master")
+    :config
+    (global-jumpy-mode t)
+    (setq jumpy-buffer-filters
+          '("\\*Messages\\*"
+              "Output\\*$"
+              help-mode
+              compilation-mode
+              magit-mode
+              magit-status-mode
+              magit-diff-mode))
+    (setq jumpy-prefer-same-window t))
+#+end_src
+
+#+RESULTS:
 
 * Navigating
 ** Projectile
@@ -1132,53 +1136,53 @@ Version 2017-01-27"
     (diredfl-global-mode)
 
     (set-face-attribute 'diredfl-dir-priv nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0D)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0D)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-read-priv nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0B)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-write-priv nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0A)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0A)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-exec-priv nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base08)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base08)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-no-priv nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base03)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base03)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-dir-name nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0C)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0C)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-symlink nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base05)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base05)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-dir-heading nil
                         :weight 'bold
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0B)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-file-name nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base05)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base05)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-file-suffix nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0B)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0B)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-number nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0A)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00))
+                        :foreground (plist-get my/base16-colors :base0A)
+                        :background (plist-get my/base16-colors :base00))
 
     (set-face-attribute 'diredfl-date-time nil
-                        :foreground (plist-get base16-tomorrow-night-theme-colors :base0D)
-                        :background (plist-get base16-tomorrow-night-theme-colors :base00)))
+                        :foreground (plist-get my/base16-colors :base0D)
+                        :background (plist-get my/base16-colors :base00)))
 #+end_src
 
 #+RESULTS:
@@ -1564,7 +1568,7 @@ Highlight the cursor whenever I scroll around.
       :straight t
       :config
       (beacon-mode 1)
-      (setq beacon-color (plist-get base16-tomorrow-night-theme-colors :base02)))
+      (setq beacon-color (plist-get my/base16-colors :base02)))
 #+end_src
 
 ** Dimmer
@@ -1654,6 +1658,19 @@ Dim inactive buffers.
     :straight t)
 #+end_src
 * Coding
+** Electric pair mode
+:PROPERTIES:
+:ID:       0e486fb6-4eb5-4e70-8e57-1f268fc4fa30
+:END:
+Automatically pair braces
+
+#+begin_src elisp
+  (electric-pair-mode t)
+#+end_src
+
+#+RESULTS:
+: t
+
 ** GitHub Copilot
 :PROPERTIES:
 :ID:       3a3911e4-b2ee-4073-80da-5d7f04d5f87f
@@ -2363,8 +2380,8 @@ I typically use 2 spaces to indent.
     (defun esh-customize-faces ()
       (set-face-attribute 'eshell-ls-directory
                           nil
-                          :foreground (plist-get base16-tomorrow-night-theme-colors :base0C)
-                          :background (plist-get base16-tomorrow-night-theme-colors :base00)))
+                          :foreground (plist-get my/base16-colors :base0C)
+                          :background (plist-get my/base16-colors :base00)))
 
     (defmacro esh-section (name form &rest props)
       `(setq ,name
@@ -2388,24 +2405,24 @@ I typically use 2 spaces to indent.
 
     (esh-section esh-header
                  "λ"
-                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base08)))
+                 `(:foreground ,(plist-get my/base16-colors :base08)))
 
     (esh-section esh-user
                  (user-login-name)
-                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0B)))
+                 `(:foreground ,(plist-get my/base16-colors :base0B)))
 
     (esh-section esh-dir
                  (concat "[" (abbreviate-file-name (eshell/pwd)) "]")
-                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0E)))
+                 `(:foreground ,(plist-get my/base16-colors :base0E)))
 
     (esh-section esh-git
                  (when-let ((branch (magit-get-current-branch))) 
                    (concat " " branch))
-                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0D)))
+                 `(:foreground ,(plist-get my/base16-colors :base0D)))
 
     (esh-section esh-footer
                  "\n→"
-                 `(:foreground ,(plist-get base16-tomorrow-night-theme-colors :base0A)))
+                 `(:foreground ,(plist-get my/base16-colors :base0A)))
 
     (setq eshell-prompt-regexp "→ ")
     (setq eshell-skip-prompt-function #'eshell-skip-prompt)
@@ -2712,10 +2729,7 @@ Let's use web-mode, which supports font locking for templating.
     :straight (company-solidity :type git :host github :repo "ethereum/emacs-solidity")
     :defer t
     :init
-    (add-hook 'solidity-mode-hook
-              (lambda ()
-                (set (make-local-variable 'company-backends)
-                     '((company-dabbrev-code company-solidity company-capf))))))
+    )
 
   (use-package prettier
     :straight t
