use corfu instead of company

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -1492,10 +1492,10 @@ These packages succeed selectrum (RIP).
     :straight t
     :init
     (setq completion-styles '(orderless basic)
-          completion-category-defaults nil
           completion-category-overrides '((file (styles partial-completion))))
 
     :config
+    (setq completion-category-defaults nil)
     (leader-def :infix "f"
       "f" 'find-file)
 
@@ -1516,6 +1516,7 @@ These packages succeed selectrum (RIP).
   (use-package embark
     :straight (embark :type git :host github :repo "oantolin/embark")
     :bind
+    ;; TODO: need a different map here
     (:map electrum-minibuffer-map
           ("C-j" . embark-act))
 
@@ -1601,7 +1602,6 @@ Dim inactive buffers.
     :config
     (dimmer-mode t)
     (dimmer-configure-which-key)
-    (dimmer-configure-company-box)
     (dimmer-configure-magit)
     (dimmer-configure-org)
 
@@ -1610,14 +1610,30 @@ Dim inactive buffers.
       (let ((ignore (cl-some (lambda (f) (and (fboundp f) (funcall f)))
                              dimmer-prevent-dimming-predicates)))
         (dimmer-process-all (not ignore))))
+
     (advice-add 'dimmer-config-change-handler :override #'advices/dimmer-config-change-handler)
+
+    (defun corfu-frame-p ()
+      "Check if the buffer is a corfu frame buffer."
+      (string-match-p "\\` \\*corfu" (buffer-name)))
+
+    (defun dimmer-configure-corfu ()
+      "Convenience settings for corfu users."
+      (add-to-list
+       'dimmer-prevent-dimming-predicates
+       #'corfu-frame-p))
+
+    (dimmer-configure-corfu)
 
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*Help\\*")
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*compilation\\*")
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*mu4e-headers\\*")
     (add-to-list 'dimmer-buffer-exclusion-regexps "\\*mu4e-view\\*"))
- 
+
 #+end_src
+
+#+RESULTS:
+: t
 
 * Writing
 ** Perfect Margin
@@ -1641,14 +1657,12 @@ Dim inactive buffers.
           (diminish 'olivetti-mode)
           (diminish 'flyspell-mode)
 
-          (company-mode -1)
           (olivetti-mode)
           (flyspell-mode))
       (progn
           (diminish-undo 'olivetti-mode)
           (diminish-undo 'flyspell-mode)
 
-          (company-mode)
           (olivetti-mode -1)
           (flyspell-mode -1))))
 
@@ -1699,10 +1713,6 @@ Automatically pair braces
     :ensure t
     :config
     (add-hook 'prog-mode-hook 'copilot-mode)
-
-    (with-eval-after-load 'company
-      ;; disable inline previews
-      (delq 'company-preview-if-just-one-frontend company-frontends))
 
     (setq copilot-max-char 200000)
 
@@ -1803,18 +1813,26 @@ Autodetect indentation:
 :END:
 
 #+BEGIN_SRC emacs-lisp 
-  (use-package company
-    :ensure t
+  (use-package corfu
+    :straight t
     :defer 0.1
     :config
-    (setq company-idle-delay 0) 
-    (setq company-minimum-prefix-length 1)
-    (setq company-global-modes '(not org-mode eshell-mode))
-    (global-company-mode)
-    (define-key company-active-map (kbd "M-n") nil)
-    (define-key company-active-map (kbd "M-p") nil)
-    (define-key company-active-map (kbd "C-n") #'company-select-next)
-    (define-key company-active-map (kbd "C-p") #'company-select-previous))
+    (setq corfu-auto t)
+    (setq corfu-auto-delay 0)
+    (setq corfu-auto-prefix 1)
+    (setq corfu-quit-no-match 'separator)
+    (setq corfu-quit-at-boundary 'separator)
+
+    (defun orderless-fast-dispatch (word index total)
+      (and (= index 0) (= total 1) (length< word 3)
+           `(orderless-regexp . ,(concat "^" (regexp-quote word)))))
+
+    (orderless-define-completion-style orderless-fast
+      (orderless-style-dispatchers '(orderless-fast-dispatch))
+      (orderless-matching-styles '(orderless-literal orderless-regexp)))
+
+    (setq completion-styles '(orderless-fast basic))
+    (global-corfu-mode))
 #+END_SRC
 
 #+RESULTS:
@@ -2867,12 +2885,6 @@ Let's use web-mode, which supports font locking for templating.
     (setq solidity-flycheck-chaining-error-level t)
     (setq solidity-flycheck-use-project t))
 
-  (use-package company-solidity
-    :straight (company-solidity :type git :host github :repo "ethereum/emacs-solidity")
-    :defer t
-    :init
-    )
-
   (use-package prettier
     :straight t
     :config)
@@ -2880,8 +2892,6 @@ Let's use web-mode, which supports font locking for templating.
 #+end_src
 
 #+RESULTS:
-| lambda | nil | (set (make-local-variable 'company-backends) (append '((company-dabbrev-code company-solidity company-capf)) company-backends)) |                                                |                                                 |                                        |                                                                             |                              |
-| lambda | nil | (setq solidity-flycheck-solium-checker-active t)                                                                                | (setq solidity-flycheck-solc-checker-active t) | (setq solidity-flycheck-chaining-error-level t) | (setq solidity-flycheck-use-project t) | (setq solidity-flycheck-solc-additional-allow-paths '(~/.brownie/packages)) | (require 'solidity-flycheck) |
 
 ** Vyper
 :PROPERTIES:
